--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ nav ul li a:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: url("background.jpg") center center / cover no-repeat;
+    background: url("An.png") center center / cover no-repeat;
 }
 
 .hero::after {
